Generate groupId on server-side
 - PRO-1905
