# docs/swagger/sota-device_registry.yml
@@ -149,15 +149,10 @@ paths:
             type: array
             items:
               $ref: '#/definitions/GroupInfo'
-  /device_groups/{groupId}:
-    put:
+  /device_groups:
+    post:
       description: Create a group for a namespace/groupName entry
       parameters:
-      - name: groupId
-        description: The uuid of the group
-        in: path
-        required: true
-        type: string
       - name: groupName
         description: The name of the group of devices
         in: query
@@ -166,15 +161,10 @@ paths:
       responses:
         201:
           description: Created
-  /device_groups/{groupId}/group_info:
+  /device_groups/group_info:
     post:
       description: Create a group info entry for a namespace/groupName entry
       parameters:
-      - name: groupId
-        description: The uuid of the group
-        in: path
-        required: true
-        type: string
       - name: groupName
         description: The name of the group of devices
         in: query
@@ -189,6 +179,7 @@ paths:
       responses:
         201:
           description: Created
+  /device_groups/{groupId}/group_info:
     put:
       description: Update the group info entry for a namespace/groupName entry
       parameters:
